updated rewards page

--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -2641,7 +2641,7 @@
             "type": "product",
             "settings": {
               "image": "shopify:\/\/shop_images\/social-3.jpg",
-              "featured_product": "12-natural-bully-stick",
+              "featured_product": "12-inch-braided-bully-stick",
               "rating": 1,
               "title": "Auggie",
               "description": "Do I smell... SHNACKS??? Nothing better than a @jacks_premium Friday delivery!",
